--- a/.github/workflows/tests-running.yml
+++ b/.github/workflows/tests-running.yml
@@ -1,4 +1,4 @@
-name: TESTS
+name: CI
 
 on:
   pull_request:
@@ -11,6 +11,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Install modules
-        run: npm install
+        run: yarn
       - name: Run tests
-        run: npm run test
+        run: yarn test
