fix: fixed script test

--- a/.github/workflows/tests-running.yml
+++ b/.github/workflows/tests-running.yml
@@ -1,4 +1,4 @@
-name: CI
+name: TESTS
 
 on:
   pull_request:
@@ -11,6 +11,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Install modules
-        run: yarn
+        run: npm install
       - name: Run tests
-        run: yarn test
+        run: npm run test
